# RESTClient

./: .gitignore  Get-Rest-Data.drawio  GetRESTData.drawio  LICENSE  README.md  pyproject.toml
python/: getRestData.py  tests.py
src/python/: RESTObject.py  getRestData.py  main.py
src/rest_client_micro/: __init__.py  _utils.py  base_rest_api.py  basic_auth.py  response.py  rest_client.py  rest_object.py
tests/: flask_server.py  test_get.py  test_getRestData.py  test_rest_client.py
tests/test_auth/: test_auth.py
