[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "rest_client_micro"
version = "0.2.0"
authors = [
  { name="Samuel Shiels" },
]
description = "A micro rest client"
readme = "README.md"
requires-python = ">=3.11.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
]