[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"
[project]
name = "rest_client_micro"
version = "0.3.11"
authors = [
  { name = "Samuel Shiels" },
]
description = "A micro rest client"
readme = "README.md"
requires-python = ">=3.11.5"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
]
dependencies = [
]
