[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"
[project]
name = "rest_client_micro"
version = "0.3.19"
authors = [
  { name = "Samuel Shiels" },
]
description = "A micro rest client"
readme = "README.md"
requires-python = ">=3.11.5"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "diskcache>=5.6.3",
  "jsonpickle>=3.0.2",
]
